--- a/src/Style.css
+++ b/src/Style.css
@@ -5,7 +5,8 @@
     color: black;
 }
 body{
-    background-color: yellowgreen;
+/*     background-color: yellowgreen; */
+    background-color: whitesmoke;
 }
 a{
     text-decoration: none;
